<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MailingList">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="398dp"
            android:layout_height="153dp"
            android:src="@drawable/services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Membership_request"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/membership"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/arabic_Name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="212dp"
            android:background="@color/text"
            android:hint="@string/Arabic_Name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/english_Name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="276dp"
            android:background="@color/text"
            android:hint="@string/English_Name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="344dp"
            android:background="@color/text"
            android:hint="@string/Age"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="412dp"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Gender"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mailingList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/GenderRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="440dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/female"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:onClick="onRadoiButtonClick"
                android:text="@string/Female"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="true"
                android:layoutDirection="rtl"
                android:onClick="onRadoiButtonClick"
                android:text="@string/Male"
                android:textAlignment="textStart" />
        </RadioGroup>

        <EditText
            android:id="@+id/nat_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="480dp"
            android:background="@color/text"
            android:hint="@string/National_Id"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/stu_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="548dp"
            android:background="@color/text"
            android:hint="@string/Student_Id"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/College"
            android:layout_width="384dp"
            android:layout_height="55dp"
            android:layout_marginTop="616dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"/>

        <EditText
            android:id="@+id/major"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="684dp"
            android:background="@color/text"
            android:hint="@string/Major"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/grad_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="752dp"
            android:background="@color/text"
            android:hint="@string/Graduate_Date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="820dp"
            android:background="@color/text"
            android:hint="@string/Phone"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="888dp"
            android:background="@color/text"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="956dp"
            android:background="@color/text"
            android:hint="العنوان"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/send"
            android:layout_width="135dp"
            android:layout_height="36dp"
            android:layout_marginTop="1024dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Send"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>