<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".talaqi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button6"
                android:layout_width="385dp"
                android:layout_height="49dp"
                android:layout_marginTop="528dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_name"
                android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
                android:gravity="right|center_vertical"
                android:onClick="clickTalaqi"
                android:paddingRight="5dp"
                android:text="@string/talqi2"
                android:textColor="@color/text"


                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/Cerimg"
                android:layout_width="375dp"
                android:layout_height="91dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <View
                android:id="@+id/view5"
                android:layout_width="201dp"
                android:layout_height="201dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/colorBehindIcon" />

            <Button
                android:id="@+id/button5"
                android:layout_width="385dp"
                android:layout_height="49dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_name"
                android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
                android:gravity="right|center_vertical"
                android:onClick="clickTalaqi"
                android:paddingRight="5dp"
                android:text="@string/talqi1"
                android:textColor="@color/text"


                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Cerimg" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="375dp"
                android:layout_height="91dp"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="152dp"
                android:layout_height="162dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/view5"
                app:layout_constraintEnd_toEndOf="@+id/view5"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toTopOf="@+id/view5" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>